front-envoy.local.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            codec_type: AUTO
            stat_prefix: ingress_http
            access_log:
            - name: envoy.access_loggers.stdout
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
            route_config:
              name: local_route
              virtual_hosts:
              - name: backend
                domains:
                  - "*"
                routes:
                  - match:
                      prefix: "/service/users"
                    route:
                      cluster: user_service
                  - match:
                      prefix: "/service/teams"
                    route:
                      cluster: team_service
            http_filters:
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: user_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: user_service
      endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: go-user-service
                  port_value: 4000
  - name: team_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: team_service
      endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: go-team-service
                  port_value: 4002
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
